# ChaosNexus

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
docs/: 00_PROJECT_CHARTER.md  01_VISION.md  02_SOFTWARE_REQUIREMENTS_SPECIFICATION.md  03_SOFTWARE_ARCHITECTURE_DOCUMENT.md  04_SOFTWARE_DESIGN_SPECIFICATION.md  05_IMPLEMENTATION_GUIDE.md
docs/testing/: FUTURE_TEST_STRATEGY.md  TESTING_STANDARDS.md
include/logging/: console_sink.hpp  log_format.cpp  log_format.hpp  log_level.hpp  log_macros.hpp  log_sink.hpp  logger.hpp
include/nexus/core/config/: config_key.hpp  config_value.hpp
include/nexus/core/error/: assert.hpp  error.hpp  error_category.hpp  error_code.hpp  error_format.hpp  exception.hpp  helpers.hpp  result.hpp
include/nexus/core/hash/: hash.hpp
include/nexus/core/identity/: id_helpers.hpp  ids.hpp  strong_id.hpp  uuid.hpp  uuid_format.hpp  uuid_hash.hpp
include/nexus/core/logging/: console_sink.hpp  log_format.hpp  log_level.hpp  log_macros.hpp  log_sink.hpp  logger.hpp
include/nexus/core/platform/: platform.hpp
include/nexus/core/text/: strings.hpp
include/nexus/core/types/: concepts.hpp  types.hpp
nexus-bench/: CMakeLists.txt
nexus-bench/src/: main.cpp
nexus-cli/: CMakeLists.txt
nexus-cli/src/: main.cpp
nexus-core/: CMakeLists.txt
nexus-core/include/nexus-core/: bootstrap.hpp
nexus-core/src/: bootstrap.cpp
nexus-core/src/config/: config_key.cpp  config_value.cpp
nexus-core/src/error/: error_format.cpp
nexus-core/src/hash/: hash.cpp
nexus-core/src/identity/: uuid_format.cpp
nexus-core/src/logging/: console_sink.cpp  log_format.cpp  logger.cpp
nexus-core/src/text/: strings.cpp
nexus-lab/: CMakeLists.txt
nexus-lab/src/: main.cpp
nexus-plugins/: CMakeLists.txt
nexus-sdk/: CMakeLists.txt
nexus-sdk/include/nexus-sdk/: bootstrap.hpp
tests/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt
tests/common/: CMakeLists.txt
tests/common/include/nexus-test-common/: bootstrap.hpp
tests/common/src/: bootstrap.cpp
tests/fixtures/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/performance/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/config/: CMakeLists.txt  test_config.cpp
tests/unit/core/: CMakeLists.txt  bootstrap_test.cpp
tests/unit/error/: CMakeLists.txt  test_assert.cpp  test_error.cpp  test_error_code.cpp  test_exception.cpp  test_result.cpp
tests/unit/hash/: CMakeLists.txt  test_hash.cpp
tests/unit/identity/: CMakeLists.txt  test_strong_id.cpp  test_uuid.cpp
tests/unit/logging/: CMakeLists.txt  test_logging.cpp
tests/unit/platform/: CMakeLists.txt  test_platform.cpp
tests/unit/plugins/: CMakeLists.txt
tests/unit/sdk/: CMakeLists.txt
tests/unit/text/: CMakeLists.txt  test_strings.cpp
tests/unit/types/: CMakeLists.txt  test_types.cpp
tests/unit/utilities/: CMakeLists.txt
