# ==========================================
# nexus-plugins — Official Plugin Collection
# ==========================================
#
# This is a bootstrap placeholder for Phase 7A (Repository Bootstrap).
# nexus-plugins is a container for official, maintained extensions
# that exercise and stabilize nexus-sdk. No plugins exist yet, so
# no targets are declared here. Individual plugins will be added as
# subdirectories in a future phase, e.g.:
#
#   add_subdirectory(some-plugin-name)